# engine

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
config/: default.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/traits/: executor.rs  mod.rs  network.rs  provider.rs  simulator.rs  strategy.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs  provider.rs  reconnect.rs  stream.rs
crates/ingestion/tests/: ingestion_test.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/simulation/: Cargo.toml
crates/simulation/benches/: simulation_bench.rs
crates/simulation/src/: engine.rs  gas.rs  lib.rs  state.rs
crates/simulation/src/v4/: hooks.rs  mod.rs  pool_manager.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  registry.rs
crates/strategy/src/examples/: mod.rs  two_pool_arb.rs
