[workspace]
members = [
    "crates/core",
    "crates/ingestion",
    "crates/simulation",
    "crates/strategy",
    "crates/executor",
    "crates/observability",
    "crates/bin",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
alloy = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
