[package]
name = "pyralis-simulation"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
dashmap.workspace = true
pyralis-core = { path = "../core" }
revm.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "simulation_bench"
harness = false
